# hacker-news

./: .env  .gitignore  Cargo.toml
migrations/2020-11-30-135424_hackernews/: up.sql
postgres/: run_postgres.sh
postgres/pgdata/pgdata/base/13395/: pg_internal.init
postgres/pgdata/pgdata/global/: 1260  pg_control  pg_internal.init
postgres/pgdata/pgdata/pg_stat/: db_0.stat  db_13395.stat  global.stat
src/: errors.rs  main.rs  models.rs  schema.rs
templates/: base.html  index.html  post.html  profile.html
